# Agentic-AI

./: main.py  pyproject.toml
updatedlangchain/: 01-langchainV1.ipynb  02-modelintegration.ipynb  03-tools.ipynb  04-messages.ipynb  05-structuredoutput.ipynb  06-Middleware.ipynb
